<?xml version="1.0"?>
<package format="2">
  <name>odin_vlm_terminal</name>
  <version>0.0.1</version>
  <description>Terminal node that subscribes to ODIN image topic and queries a local llama-server</description>

  <maintainer email="yuhaowen@manifoldtech.cn">Haowen Yu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export/>
</package>
